<resources>
    <string name="app_name">小菜一碟</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">首页</string>
    <string name="title_recipe">菜谱</string>
    <string name="title_collect">收藏</string>
    <string name="title_my">我的</string>

    <string name="actionbar_serch">搜索</string>
    <string name="actionbar_setting">设置</string>
    <string name="actionbar_photo">拍照</string>
    <string name="actionbar_share">分享</string>


    <string name="recipe_add_recipe">新建菜谱</string>
    <string name="recipe_add_trends">新建动态</string>
</resources>