<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    搜索-->
    <item
        android:id="@+id/actionbar_search"
        android:icon="@drawable/icon_search"
        android:orderInCategory="100"
        android:title="@string/actionbar_serch" />

<!--    拍照-->
    <item
        android:id="@+id/actionbar_photo"
        android:icon="@drawable/paizhao"
        android:title="@string/actionbar_photo"/>

<!--    分享-->
    <item
        android:id="@+id/actionbar_share"
        android:icon="@drawable/fenxiang"
        android:title="@string/actionbar_share"/>
    <!--    新建菜谱-->
    <item
        android:id="@+id/recipe_add_ricipe"
        android:orderInCategory="100"
        android:title="@string/recipe_add_recipe" />
    <!--    新建动态-->
    <item
        android:id="@+id/recipe_add_trends"
        android:orderInCategory="100"
        android:title="@string/recipe_add_trends" />
</menu>